fix: remove visibility of inputs for safari

--- a/src/components/Option/Option.module.css
+++ b/src/components/Option/Option.module.css
@@ -29,6 +29,7 @@
   padding: 0;
   margin: 0;
   border: 0;
+  opacity: 0;
 }
 
 .label.active {
